<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpReviewActivity">

    <include layout="@layout/include_progress_overlay"/>

    <TextView
        android:id="@+id/allDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/confirm_registration"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enjoy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/please_review"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allDone" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/textInputs"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enjoy">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/name"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/fullName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@id/fullName"
            app:layout_constraintTop_toTopOf="@id/fullName" />

        <TextView
            android:id="@+id/fullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/DOB"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/dob"
            app:layout_constraintEnd_toStartOf="@id/dob"
            app:layout_constraintTop_toTopOf="@id/dob" />

        <TextView
            android:id="@+id/dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/mobile"
            app:layout_constraintStart_toStartOf="@id/fullName"
            app:layout_constraintTop_toBottomOf="@+id/fullName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/mobile"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/mobile"
            app:layout_constraintEnd_toStartOf="@id/mobile"
            app:layout_constraintTop_toTopOf="@id/mobile" />

        <TextView
            android:id="@+id/mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintStart_toStartOf="@id/dob"
            app:layout_constraintTop_toBottomOf="@+id/dob" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/email"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/email"
            app:layout_constraintEnd_toStartOf="@id/email"
            app:layout_constraintTop_toTopOf="@id/email" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/childrenText"
            app:layout_constraintStart_toStartOf="@id/mobile"
            app:layout_constraintTop_toBottomOf="@+id/mobile" />

        <TextView
            android:id="@+id/childrenText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="20sp"
            android:text="@string/children"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/email"
            app:layout_constraintTop_toBottomOf="@+id/email" />

    </android.support.constraint.ConstraintLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/child_selector"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:maxHeight="400dp"
        android:scrollbars="vertical"
        android:background="@drawable/signup_input_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputs"
        app:layout_constraintBottom_toTopOf="@id/userImage"/>

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/user_registration_photo"
        app:layout_constraintBottom_toTopOf="@id/finish"
        app:layout_constraintTop_toBottomOf="@id/child_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <Button
        android:id="@+id/finish"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/authout_button"
        android:text="@string/confirm"
        android:onClick="confirmUserSubmission"
        android:textSize="16sp"
        android:textColor="@color/textColour"
        app:layout_constraintBottom_toTopOf="@id/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/back"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/authout_button_secondary"
        android:text="@string/back"
        android:onClick="back"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>