<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.camerakit.CameraKitView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/camera"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            app:camera_facing="front" />

        <View
            android:id="@+id/myRectangleView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rectangle"/>

    </FrameLayout>

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/app_name"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/buttonSignIn"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="128dp"
            android:layout_height="96dp"
            android:layout_marginEnd="16dp"
            android:onClick="onPressSignIn"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonSignOut"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="128dp"
            android:layout_height="96dp"
            android:layout_marginStart="16dp"
            android:onClick="onPressSignOut"
            android:text="@string/sign_out"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>